Update skills section, create gradient mixins, fix overflow bug

--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -31,10 +31,6 @@
         z-index: -1;
     }
 
-    .portfolio-heading {
-        margin-bottom: 1rem;
-    }
-
     @media screen and (max-width: 1279px) {
         .about__content {
             width: 80%;
